// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a section 1`] = `
<tr
  key="neu.edu/201810/CS/1210/13502"
>
  <td>
    13502
  </td>
  <td>
    Jennifer Anne Shire
  </td>
  <td
    key="weekDayBoxes"
  >
    <WeekdayBoxes
      section={
        Section {
          "classId": "1210",
          "crn": "13502",
          "host": "neu.edu",
          "lastUpdateTime": 1511131914029,
          "meetings": Array [
            Meeting {
              "endDate": "2017-12-07T00:00:00.000Z",
              "startDate": "2017-09-07T00:00:00.000Z",
              "times": Array [
                Array [
                  Object {
                    "end": "1970-01-06T11:30:00.000Z",
                    "start": "1970-01-06T09:50:00.000Z",
                  },
                ],
              ],
              "where": "Snell Engineering Center 108",
            },
          ],
          "online": false,
          "profs": Array [
            "Jennifer Anne Shire",
          ],
          "seatsCapacity": 19,
          "seatsRemaining": 0,
          "subject": "CS",
          "termId": "201810",
          "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
          "waitCapacity": 0,
          "waitRemaining": 0,
        }
      }
    />
  </td>
  <td
    key="times"
  >
    9:50 - 11:30 am
  </td>
  <td
    key="locationLinks"
  >
    <LocationLinks
      locations={
        Array [
          "Snell Engineering Center 108",
        ]
      }
    />
  </td>
  <td>
    <div
      className="inlineBlock"
      data-tip="Open Seats/Total Seats"
    >
      0
      /
      19
    </div>
  </td>
  <td
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      className="inlineBlock"
      data-tip="Open/Total Waitlist Seats"
    >
      0
      /
      0
    </div>
  </td>
  <td
    style={
      Object {
        "display": "none",
      }
    }
  >
    <Icon
      as="i"
      name="x"
    />
  </td>
  <td
    style={
      Object {
        "display": "none",
      }
    }
  >
    <center>
      <NotifCheckBox
        section={
          Section {
            "classId": "1210",
            "crn": "13502",
            "host": "neu.edu",
            "lastUpdateTime": 1511131914029,
            "meetings": Array [
              Meeting {
                "endDate": "2017-12-07T00:00:00.000Z",
                "startDate": "2017-09-07T00:00:00.000Z",
                "times": Array [
                  Array [
                    Object {
                      "end": "1970-01-06T11:30:00.000Z",
                      "start": "1970-01-06T09:50:00.000Z",
                    },
                  ],
                ],
                "where": "Snell Engineering Center 108",
              },
            ],
            "online": false,
            "profs": Array [
              "Jennifer Anne Shire",
            ],
            "seatsCapacity": 19,
            "seatsRemaining": 0,
            "subject": "CS",
            "termId": "201810",
            "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
            "waitCapacity": 0,
            "waitRemaining": 0,
          }
        }
      />
    </center>
  </td>
  <td>
    <a
      className="inlineBlock sectionGlobe"
      data-tip="View on neu.edu"
      href="https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="link"
        src="file"
      />
    </a>
  </td>
</tr>
`;

exports[`should render a section w/ notif check boxes 1`] = `
<tr
  key="neu.edu/201810/CS/1210/13502"
>
  <td>
    13502
  </td>
  <td>
    Jennifer Anne Shire
  </td>
  <td
    key="weekDayBoxes"
  >
    <WeekdayBoxes
      section={
        Section {
          "classId": "1210",
          "crn": "13502",
          "host": "neu.edu",
          "lastUpdateTime": 1511131914029,
          "meetings": Array [
            Meeting {
              "endDate": "2017-12-07T00:00:00.000Z",
              "startDate": "2017-09-07T00:00:00.000Z",
              "times": Array [
                Array [
                  Object {
                    "end": "1970-01-06T11:30:00.000Z",
                    "start": "1970-01-06T09:50:00.000Z",
                  },
                ],
              ],
              "where": "Snell Engineering Center 108",
            },
          ],
          "online": false,
          "profs": Array [
            "Jennifer Anne Shire",
          ],
          "seatsCapacity": 19,
          "seatsRemaining": 0,
          "subject": "CS",
          "termId": "201810",
          "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
          "waitCapacity": 0,
          "waitRemaining": 0,
        }
      }
    />
  </td>
  <td
    key="times"
  >
    9:50 - 11:30 am
  </td>
  <td
    key="locationLinks"
  >
    <LocationLinks
      locations={
        Array [
          "Snell Engineering Center 108",
        ]
      }
    />
  </td>
  <td>
    <div
      className="inlineBlock"
      data-tip="Open Seats/Total Seats"
    >
      0
      /
      19
    </div>
  </td>
  <td
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      className="inlineBlock"
      data-tip="Open/Total Waitlist Seats"
    >
      0
      /
      0
    </div>
  </td>
  <td
    style={
      Object {
        "display": "none",
      }
    }
  >
    <Icon
      as="i"
      name="x"
    />
  </td>
  <td
    style={
      Object {
        "display": false,
      }
    }
  >
    <center>
      <NotifCheckBox
        section={
          Section {
            "classId": "1210",
            "crn": "13502",
            "host": "neu.edu",
            "lastUpdateTime": 1511131914029,
            "meetings": Array [
              Meeting {
                "endDate": "2017-12-07T00:00:00.000Z",
                "startDate": "2017-09-07T00:00:00.000Z",
                "times": Array [
                  Array [
                    Object {
                      "end": "1970-01-06T11:30:00.000Z",
                      "start": "1970-01-06T09:50:00.000Z",
                    },
                  ],
                ],
                "where": "Snell Engineering Center 108",
              },
            ],
            "online": false,
            "profs": Array [
              "Jennifer Anne Shire",
            ],
            "seatsCapacity": 19,
            "seatsRemaining": 0,
            "subject": "CS",
            "termId": "201810",
            "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
            "waitCapacity": 0,
            "waitRemaining": 0,
          }
        }
      />
    </center>
  </td>
  <td>
    <a
      className="inlineBlock sectionGlobe"
      data-tip="View on neu.edu"
      href="https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="link"
        src="file"
      />
    </a>
  </td>
</tr>
`;

exports[`should render another section 1`] = `
<tr
  key="neu.edu/201810/CS/1210/14404"
>
  <td>
    14404
  </td>
  <td>
    Jennifer Anne Shire
  </td>
  <td
    key="weekDayBoxes"
  >
    <WeekdayBoxes
      section={
        Section {
          "classId": "1210",
          "crn": "14404",
          "host": "neu.edu",
          "lastUpdateTime": 1511131914065,
          "meetings": Array [
            Meeting {
              "endDate": "2017-12-07T00:00:00.000Z",
              "startDate": "2017-09-07T00:00:00.000Z",
              "times": Array [
                Array [
                  Object {
                    "end": "1970-01-06T13:25:00.000Z",
                    "start": "1970-01-06T11:45:00.000Z",
                  },
                ],
              ],
              "where": "Ryder Hall 431",
            },
          ],
          "online": false,
          "profs": Array [
            "Jennifer Anne Shire",
          ],
          "seatsCapacity": 19,
          "seatsRemaining": 0,
          "subject": "CS",
          "termId": "201810",
          "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
          "waitCapacity": 0,
          "waitRemaining": 0,
        }
      }
    />
  </td>
  <td
    key="times"
  >
    11:45 - 1:25 pm
  </td>
  <td
    key="locationLinks"
  >
    <LocationLinks
      locations={
        Array [
          "Ryder Hall 431",
        ]
      }
    />
  </td>
  <td>
    <div
      className="inlineBlock"
      data-tip="Open Seats/Total Seats"
    >
      0
      /
      19
    </div>
  </td>
  <td
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      className="inlineBlock"
      data-tip="Open/Total Waitlist Seats"
    >
      0
      /
      0
    </div>
  </td>
  <td
    style={
      Object {
        "display": "none",
      }
    }
  >
    <Icon
      as="i"
      name="x"
    />
  </td>
  <td
    style={
      Object {
        "display": "none",
      }
    }
  >
    <center>
      <NotifCheckBox
        section={
          Section {
            "classId": "1210",
            "crn": "14404",
            "host": "neu.edu",
            "lastUpdateTime": 1511131914065,
            "meetings": Array [
              Meeting {
                "endDate": "2017-12-07T00:00:00.000Z",
                "startDate": "2017-09-07T00:00:00.000Z",
                "times": Array [
                  Array [
                    Object {
                      "end": "1970-01-06T13:25:00.000Z",
                      "start": "1970-01-06T11:45:00.000Z",
                    },
                  ],
                ],
                "where": "Ryder Hall 431",
              },
            ],
            "online": false,
            "profs": Array [
              "Jennifer Anne Shire",
            ],
            "seatsCapacity": 19,
            "seatsRemaining": 0,
            "subject": "CS",
            "termId": "201810",
            "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
            "waitCapacity": 0,
            "waitRemaining": 0,
          }
        }
      />
    </center>
  </td>
  <td>
    <a
      className="inlineBlock sectionGlobe"
      data-tip="View on neu.edu"
      href="https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="link"
        src="file"
      />
    </a>
  </td>
</tr>
`;
